--- a/razer pages/Pages/Index.cshtml
+++ b/razer pages/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Razer pages</h1>
+    <h1 class="display-4">Razer Currency Convertor</h1>
     <h2>By Mohammed Loqman</h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
