--- a/razer pages/Pages/Shared/_Layout.cshtml
+++ b/razer pages/Pages/Shared/_Layout.cshtml
@@ -36,9 +36,13 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-center">
         <div class="container">
-            &copy; 2022 - razer_pages - <a asp-area="" asp-page="/Privacy">Privacy</a>
+                &copy; 2022 - Razer Currency Convertor |
+                Mohammed Loqman (22132753) 
+            <br/>
+                CO550 Web Appications |
+                Logbook 2
         </div>
     </footer>
 
