--- a/razer pages/Pages/Shared/_Layout.cshtml
+++ b/razer pages/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CurrencyConvertor</title>
+    <title>@ViewData["Title"] - razer_pages</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CurrencyConvertor.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/razer_pages.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">CurrencyConvertor</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">razer_pages</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,9 +36,13 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-center">
         <div class="container">
-            &copy; 2022 - CurrencyConvertor - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - Razer Currency Convertor |
+            Mohammed Loqman (22132753) 
+            <br/>
+            CO550 Web Appications |
+            Logbook 2
         </div>
     </footer>
 
